--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "blueimp-gallery": "^2.25.0",
     "bootstrap": "^3.3.7",
     "css-loader": "^0.27.3",
+    "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.1",
+    "grunt": "^1.0.1",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
-    "html-withimg-loader": "^0.1.16",
     "jquery": "^3.2.0",
     "jquery-lazyload": "^1.9.7",
+    "sass-loader": "^6.0.3",
     "style-loader": "^0.14.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
